# code_utils

./: .clang-format  CMakeLists.txt  README.md  dockerfile
cmake/: FindEpoxy.cmake  FindGlog.cmake
conf/: all_config.conf  imu_config.yaml
doc/: algorithms.md  ceres.md  code_log.md  nonlinear_optimize.drawio  problems_log.md  todo_list.md
include/camera/: feature_extractor.h  feature_manager.h  features.h  frame.h  inference.h  pnp_solver.h  sfm.h  sfm_test.cc  super_glue.h  super_point.h
include/camera/camera_model/: camera_model.h  fisheye.h  pinhole.h
include/camera/common/: common.h  frame.h
include/camera/config/: config.conf
include/camera/open_stereo/: inference.h
include/common/: imu.h  kdtree.h  lru.h  point.h  point_cloud.h  sensor_data.h  so3.h  state.h  voxel.h  voxel_map.h
include/common/data/: constant.h  imu.h  point.h  point_cloud.h
include/common/hpp/: lru.hpp  sensor_data.hpp
include/common/search/: kdtree.h  voxel.h  voxel_map.h
include/imu/: imu.h  imu_processor.h  preintegration.h
include/lidar/: classic_icp.h  filter.h  match.h  ndt.h  vicp.h
include/optimizer/: cloud_match_optimize.h  curve_fitter.h  optimizer.h  slam2d.h  slam_data_struct.h  slam_data_struct.hpp  slam_model.h  slam_model.hpp
include/sensor/: imu.h  sensor_base.h
include/tensorRT/: buffers.h  common.h  error_recorder.h  generic.h  logger.h  logging.h
include/util/: config.h  logger.h  math.h  time.h  utils.h
log/: ceres_curve.txt  curve.txt  original_data.txt  random_data.txt  test_curve.txt
models/engine/: superpoint_v1.engine
models/pth/features/: superpoint_v6_from_tf.pth
protos/: all_config.proto  camera.proto  imu.proto  tensorRT.proto  utils.proto
protos/pb/: all_config.pb.cc  all_config.pb.h  camera.pb.cc  camera.pb.h  imu.pb.cc  imu.pb.h  tensorRT.pb.cc  tensorRT.pb.h  utils.pb.cc  utils.pb.h
python/: convert_superglue_to_onnx.py  convert_superpoint_to_onnx.py  superglue.py
scripts/: build.sh  docker.sh  neovide.sh  open_url.py  plot_2d_slam.py  plot_3d_slam.py  plot_imu.py  plot_xy.py
scripts/python/: plot_2d_slam.py  plot_3d_slam.py
scripts/sh/: build.sh  docker.sh  neovide.sh  run_test.sh
src/camera/: feature_extractor.cc  feature_manager.cc  inference.cc  pnp_solver.cc  sfm.cc  super_glue.cc  super_point.cc  transforms.cc
src/camera/camera_model/: camera_model.cc  fisheye.cc  pinhole.cc
src/camera/open_stereo/: inference.cc  transforms.cc
src/common/: kdtree.cc  lru.tpp  sensor_data.cc  so3.cc  state.cc  voxel.cc  voxel_map.cc
src/common/search/: kdtree.cc  voxel.cc  voxel_map.cc
src/common/tpp/: lru.tpp
src/imu/: imu.cc  imu_processor.cc  preintegration.cc
src/lidar/: classic_icp.cc  filter.cc  match.cc  ndt.cc
src/optimizer/: curve_fitter.cc  optimizer.cc  slam2d.cc  slam_data_struct.cc
src/optimizer/tpp/: slam_model.tpp
src/sensor/: imu.cc  sensor_base.cc
src/tensorRT/: generic.cc  logger.cc
src/util/: config.cc  logger.cc  math.cc  time.cc  utils.cc
test/: imu_test.cc  optimizer_test.cc  search_test.cc  utils_test.cc
test/data/lidar/: scan.pcd
trash/: icp.cc  svd_icp.cc
trash/superpoint_superglue/: super_glue.cc  super_glue.h  super_point.h
trash/superpoint_superglue/tensorrtbuffer/include/: buffers.h  common.h  error_recorder.h  half.h
trash/vgip/: BUILD.bazel  vg_icp.cc  vg_icp.h  vg_icp_test.cc
trash/vgip/common/: BUILD.bazel  gaussian_point_cloud.h  lru.h  util.h  voxelnn.cc  voxelnn.h
trash/vgip/voxel_map/: BUILD.bazel  gaussian_voxel.cc  gaussian_voxel.h  gaussian_voxel_map.cc  gaussian_voxel_map.h
